going with gradio lineplot for now

--- a/app.ipynb
+++ b/app.ipynb
@@ -14,99 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "89b41648-4d6c-489d-9d75-5441bef22852",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* Running on local URL:  http://127.0.0.1:7883\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7883/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": []
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import gradio as gr\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import random\n",
-    "from datetime import datetime, timedelta\n",
-    "\n",
-    "# Sample data generation\n",
-    "np.random.seed(42)\n",
-    "dates = pd.date_range(start='2024-01-01', periods=100, freq='D')\n",
-    "stocks = ['Stock A', 'Stock B', 'Stock C']\n",
-    "data = {stock: np.random.normal(loc=100, scale=10, size=len(dates)) for stock in stocks}\n",
-    "df = pd.DataFrame(data, index=dates)\n",
-    "\n",
-    "# Normalize prices at t=0\n",
-    "df_normalized = df / df.iloc[0] * 100\n",
-    "df_normalized.reset_index(inplace=True)\n",
-    "df_normalized = pd.melt(df_normalized, id_vars=['index'], var_name='Stock', value_name='Price')\n",
-    "df_normalized.rename(columns={'index': 'Date'}, inplace=True)\n",
-    "\n",
-    "# Function to filter data based on selected date range\n",
-    "def filter_data(start_day, end_day):\n",
-    "    start_date = dates[0] + timedelta(days=start_day)\n",
-    "    end_date = dates[0] + timedelta(days=end_day)\n",
-    "    filtered_df = df_normalized[(df_normalized['Date'] >= start_date) & (df_normalized['Date'] <= end_date)]\n",
-    "    return gr.LinePlot.update(value=filtered_df, x='Date', y='Price', color='Stock')\n",
-    "\n",
-    "# Gradio interface\n",
-    "with gr.Blocks() as demo:\n",
-    "    with gr.Row():\n",
-    "        start_slider = gr.Slider(0, len(dates)-1, value=0, label=\"Start Day\")\n",
-    "        end_slider = gr.Slider(0, len(dates)-1, value=len(dates)-1, label=\"End Day\")\n",
-    "    plot = gr.LinePlot(df_normalized, x='Date', y='Price', color='Stock', title=\"Normalized Stock Prices\", tooltip=['Date', 'Stock', 'Price'])\n",
-    "\n",
-    "    start_slider.change(filter_data, inputs=[start_slider, end_slider], outputs=plot)\n",
-    "    end_slider.change(filter_data, inputs=[start_slider, end_slider], outputs=plot)\n",
-    "\n",
-    "demo.launch()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e23f73d9-0220-4588-81ba-e638afaed68e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46240e79",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "id": "7f55ba4f-62c1-499c-b38d-0a026159d146",
    "metadata": {},
    "outputs": [
@@ -232,7 +140,7 @@
        "[11070 rows x 3 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,6 +148,8 @@
    "source": [
     "import yfinance as yf\n",
     "import pandas as pd\n",
+    "import gradio as gr\n",
+    "from datetime import timedelta\n",
     "\n",
     "# retrieve historical stock prices\n",
     "tickers = ['AAPL', 'MSFT', 'GOOGL']\n",
@@ -254,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 96,
    "id": "6d5edaff-cb53-43f7-a60e-1495e3f3361b",
    "metadata": {},
    "outputs": [
@@ -262,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7888\n",
+      "* Running on local URL:  http://127.0.0.1:7905\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -270,7 +180,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7888/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7905/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -283,16 +193,16 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 77,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "def plot_asset_prices(start_day, end_day):\n",
-    "    start_date = df.index[-1] - timedelta(days=start_day)\n",
-    "    end_date = df.index[-1] - timedelta(days=end_day)\n",
+    "def plot_asset_prices(period, shift):\n",
+    "    end_date = df.index[-1] - timedelta(days=shift)\n",
+    "    start_date = end_date - timedelta(days=period)\n",
     "    df_normalized = df[(df.index >= start_date) & (df.index <= end_date)]\n",
     "    df_normalized = df_normalized / df_normalized.iloc[0] - 1\n",
     "    df_normalized.reset_index(names='Date', inplace=True)\n",
@@ -302,17 +212,23 @@
     "        y='Price',\n",
     "        color='Asset',\n",
     "        title=\"Normalized Asset Prices\",\n",
+    "        y_title=\"Relative Change\",\n",
+    "        x_label_angle=45,\n",
+    "        # height=600,\n",
     "    )\n",
     "\n",
     "\n",
-    "# Gradio interface\n",
     "with gr.Blocks() as demo:\n",
-    "    with gr.Row():\n",
-    "        start_slider = gr.Slider(0, len(df)-1, value=0, label=\"Start Day\")\n",
-    "        end_slider = gr.Slider(0, len(df)-1, value=len(df)-1, label=\"End Day\")\n",
     "    plot = plot_asset_prices(365, 0)\n",
-    "    start_slider.change(plot_asset_prices, inputs=[start_slider, end_slider], outputs=plot)\n",
-    "    end_slider.change(plot_asset_prices, inputs=[start_slider, end_slider], outputs=plot)\n",
+    "    with gr.Row():\n",
+    "        period = gr.Radio(\n",
+    "            choices=[('5y', 5*365), ('3y', 2*365), ('2y', 2*365), ('1y', 365), ('6mo', 182), ('1mo', 30), ('1w', 7)],\n",
+    "            value=365,\n",
+    "            label=\"Period\",\n",
+    "        )\n",
+    "        shift = gr.Slider(minimum=0, maximum=365, value=0, label=\"End Date\")\n",
+    "    period.change(plot_asset_prices, inputs=[period, shift], outputs=plot)\n",
+    "    shift.change(plot_asset_prices, inputs=[period, shift], outputs=plot)\n",
     "\n",
     "demo.launch()\n"
    ]
