--- a/app.ipynb
+++ b/app.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "id": "7f55ba4f-62c1-499c-b38d-0a026159d146",
    "metadata": {},
    "outputs": [
@@ -88,38 +88,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-04</th>\n",
-       "      <td>222.009995</td>\n",
-       "      <td>169.240005</td>\n",
-       "      <td>408.459991</td>\n",
+       "      <th>2024-12-19</th>\n",
+       "      <td>249.789993</td>\n",
+       "      <td>188.509995</td>\n",
+       "      <td>437.029999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-05</th>\n",
-       "      <td>223.449997</td>\n",
-       "      <td>169.740005</td>\n",
-       "      <td>411.459991</td>\n",
+       "      <th>2024-12-20</th>\n",
+       "      <td>254.490005</td>\n",
+       "      <td>191.410004</td>\n",
+       "      <td>436.600006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-06</th>\n",
-       "      <td>222.720001</td>\n",
-       "      <td>176.509995</td>\n",
-       "      <td>420.179993</td>\n",
+       "      <th>2024-12-23</th>\n",
+       "      <td>255.270004</td>\n",
+       "      <td>194.630005</td>\n",
+       "      <td>435.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-07</th>\n",
-       "      <td>227.479996</td>\n",
-       "      <td>180.750000</td>\n",
-       "      <td>425.429993</td>\n",
+       "      <th>2024-12-24</th>\n",
+       "      <td>258.200012</td>\n",
+       "      <td>196.110001</td>\n",
+       "      <td>439.329987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2024-11-08</th>\n",
-       "      <td>226.960007</td>\n",
-       "      <td>178.350006</td>\n",
-       "      <td>422.540009</td>\n",
+       "      <th>2024-12-26</th>\n",
+       "      <td>259.019989</td>\n",
+       "      <td>195.600006</td>\n",
+       "      <td>438.109985</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11070 rows × 3 columns</p>\n",
+       "<p>11102 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -131,16 +131,16 @@
        "1980-12-17    0.115513    2.511011    0.097222\n",
        "1980-12-18    0.118862    2.511011    0.097222\n",
        "...                ...         ...         ...\n",
-       "2024-11-04  222.009995  169.240005  408.459991\n",
-       "2024-11-05  223.449997  169.740005  411.459991\n",
-       "2024-11-06  222.720001  176.509995  420.179993\n",
-       "2024-11-07  227.479996  180.750000  425.429993\n",
-       "2024-11-08  226.960007  178.350006  422.540009\n",
+       "2024-12-19  249.789993  188.509995  437.029999\n",
+       "2024-12-20  254.490005  191.410004  436.600006\n",
+       "2024-12-23  255.270004  194.630005  435.250000\n",
+       "2024-12-24  258.200012  196.110001  439.329987\n",
+       "2024-12-26  259.019989  195.600006  438.109985\n",
        "\n",
-       "[11070 rows x 3 columns]"
+       "[11102 rows x 3 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "id": "6d5edaff-cb53-43f7-a60e-1495e3f3361b",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7905\n",
+      "* Running on local URL:  http://127.0.0.1:7860\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -180,7 +180,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7905/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -193,9 +193,41 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 96,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/suki/conda/envs/dev/lib/python3.10/site-packages/gradio/queueing.py\", line 625, in process_events\n",
+      "    response = await route_utils.call_process_api(\n",
+      "  File \"/home/suki/conda/envs/dev/lib/python3.10/site-packages/gradio/route_utils.py\", line 322, in call_process_api\n",
+      "    output = await app.get_blocks().process_api(\n",
+      "  File \"/home/suki/conda/envs/dev/lib/python3.10/site-packages/gradio/blocks.py\", line 2047, in process_api\n",
+      "    result = await self.call_function(\n",
+      "  File \"/home/suki/conda/envs/dev/lib/python3.10/site-packages/gradio/blocks.py\", line 1594, in call_function\n",
+      "    prediction = await anyio.to_thread.run_sync(  # type: ignore\n",
+      "  File \"/home/suki/.local/lib/python3.10/site-packages/anyio/to_thread.py\", line 33, in run_sync\n",
+      "    return await get_asynclib().run_sync_in_worker_thread(\n",
+      "  File \"/home/suki/.local/lib/python3.10/site-packages/anyio/_backends/_asyncio.py\", line 877, in run_sync_in_worker_thread\n",
+      "    return await future\n",
+      "  File \"/home/suki/.local/lib/python3.10/site-packages/anyio/_backends/_asyncio.py\", line 807, in run\n",
+      "    result = context.run(func, *args)\n",
+      "  File \"/home/suki/conda/envs/dev/lib/python3.10/site-packages/gradio/utils.py\", line 869, in wrapper\n",
+      "    response = f(*args, **kwargs)\n",
+      "  File \"/tmp/ipykernel_38393/776070512.py\", line 5, in plot_asset_prices\n",
+      "    df_normalized = df_normalized / df_normalized.iloc[0] - 1\n",
+      "  File \"/home/suki/conda/envs/dev/lib/python3.10/site-packages/pandas/core/indexing.py\", line 1191, in __getitem__\n",
+      "    return self._getitem_axis(maybe_callable, axis=axis)\n",
+      "  File \"/home/suki/conda/envs/dev/lib/python3.10/site-packages/pandas/core/indexing.py\", line 1752, in _getitem_axis\n",
+      "    self._validate_integer(key, axis)\n",
+      "  File \"/home/suki/conda/envs/dev/lib/python3.10/site-packages/pandas/core/indexing.py\", line 1685, in _validate_integer\n",
+      "    raise IndexError(\"single positional indexer is out-of-bounds\")\n",
+      "IndexError: single positional indexer is out-of-bounds\n"
+     ]
     }
    ],
    "source": [
@@ -236,6 +268,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf524c52",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0576dc1c-66be-4fcc-9c9e-edbba3ab7c29",
    "metadata": {},
    "outputs": [],
@@ -243,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "id": "52829c7d-4bbd-4a26-9e1d-6ff3eda2193a",
    "metadata": {},
    "outputs": [
@@ -251,7 +291,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7889\n",
+      "* Running on local URL:  http://127.0.0.1:7861\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -259,7 +299,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7889/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -272,7 +312,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 78,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
