--- a/app.ipynb
+++ b/app.ipynb
@@ -146,13 +146,14 @@
     }
    ],
    "source": [
-    "import yfinance as yf\n",
-    "import pandas as pd\n",
-    "import gradio as gr\n",
     "from datetime import timedelta\n",
     "\n",
+    "import gradio as gr\n",
+    "import pandas as pd\n",
+    "import yfinance as yf\n",
+    "\n",
     "# retrieve historical stock prices\n",
-    "tickers = ['AAPL', 'MSFT', 'GOOGL']\n",
+    "tickers = [\"AAPL\", \"MSFT\", \"GOOGL\"]\n",
     "df = yf.download(\n",
     "    tickers,\n",
     "    interval=\"1d\",\n",
@@ -231,18 +232,17 @@
     }
    ],
    "source": [
-    "\n",
     "def plot_asset_prices(period, shift):\n",
     "    end_date = df.index[-1] - timedelta(days=shift)\n",
     "    start_date = end_date - timedelta(days=period)\n",
     "    df_normalized = df[(df.index >= start_date) & (df.index <= end_date)]\n",
     "    df_normalized = df_normalized / df_normalized.iloc[0] - 1\n",
-    "    df_normalized.reset_index(names='Date', inplace=True)\n",
+    "    df_normalized.reset_index(names=\"Date\", inplace=True)\n",
     "    return gr.LinePlot(\n",
-    "        value=pd.melt(df_normalized, id_vars=['Date'], var_name='Asset', value_name='Price'),\n",
-    "        x='Date',\n",
-    "        y='Price',\n",
-    "        color='Asset',\n",
+    "        value=pd.melt(df_normalized, id_vars=[\"Date\"], var_name=\"Asset\", value_name=\"Price\"),\n",
+    "        x=\"Date\",\n",
+    "        y=\"Price\",\n",
+    "        color=\"Asset\",\n",
     "        title=\"Normalized Asset Prices\",\n",
     "        y_title=\"Relative Change\",\n",
     "        x_label_angle=45,\n",
@@ -254,7 +254,15 @@
     "    plot = plot_asset_prices(365, 0)\n",
     "    with gr.Row():\n",
     "        period = gr.Radio(\n",
-    "            choices=[('5y', 5*365), ('3y', 2*365), ('2y', 2*365), ('1y', 365), ('6mo', 182), ('1mo', 30), ('1w', 7)],\n",
+    "            choices=[\n",
+    "                (\"5y\", 5 * 365),\n",
+    "                (\"3y\", 2 * 365),\n",
+    "                (\"2y\", 2 * 365),\n",
+    "                (\"1y\", 365),\n",
+    "                (\"6mo\", 182),\n",
+    "                (\"1mo\", 30),\n",
+    "                (\"1w\", 7),\n",
+    "            ],\n",
     "            value=365,\n",
     "            label=\"Period\",\n",
     "        )\n",
@@ -262,7 +270,7 @@
     "    period.change(plot_asset_prices, inputs=[period, shift], outputs=plot)\n",
     "    shift.change(plot_asset_prices, inputs=[period, shift], outputs=plot)\n",
     "\n",
-    "demo.launch()\n"
+    "demo.launch()"
    ]
   },
   {
@@ -319,32 +327,40 @@
    ],
    "source": [
     "import gradio as gr\n",
-    "import pandas as pd\n",
     "import numpy as np\n",
     "import plotly.graph_objects as go\n",
     "\n",
     "# Sample data generation\n",
     "np.random.seed(42)\n",
-    "dates = pd.date_range(start='2024-01-01', periods=100, freq='D')\n",
-    "stocks = ['Stock A', 'Stock B', 'Stock C']\n",
+    "dates = pd.date_range(start=\"2024-01-01\", periods=100, freq=\"D\")\n",
+    "stocks = [\"Stock A\", \"Stock B\", \"Stock C\"]\n",
     "data = {stock: np.random.normal(loc=100, scale=10, size=len(dates)) for stock in stocks}\n",
     "df = pd.DataFrame(data, index=dates)\n",
     "\n",
     "# Normalize prices at t=0\n",
     "df_normalized = df / df.iloc[0] * 100\n",
     "df_normalized.reset_index(inplace=True)\n",
-    "df_normalized = pd.melt(df_normalized, id_vars=['index'], var_name='Stock', value_name='Price')\n",
-    "df_normalized.rename(columns={'index': 'Date'}, inplace=True)\n",
+    "df_normalized = pd.melt(df_normalized, id_vars=[\"index\"], var_name=\"Stock\", value_name=\"Price\")\n",
+    "df_normalized.rename(columns={\"index\": \"Date\"}, inplace=True)\n",
     "\n",
     "# Function to create the plot\n",
+    "\n",
+    "\n",
     "def create_plot():\n",
     "    fig = go.Figure()\n",
-    "    for stock in df_normalized['Stock'].unique():\n",
-    "        stock_data = df_normalized[df_normalized['Stock'] == stock]\n",
-    "        fig.add_trace(go.Scatter(x=stock_data['Date'], y=stock_data['Price'], mode='lines', name=stock))\n",
-    "    fig.update_layout(title='Normalized Stock Prices', xaxis_title='Date', yaxis_title='Price',\n",
-    "                      xaxis_rangeslider_visible=True)\n",
+    "    for stock in df_normalized[\"Stock\"].unique():\n",
+    "        stock_data = df_normalized[df_normalized[\"Stock\"] == stock]\n",
+    "        fig.add_trace(\n",
+    "            go.Scatter(x=stock_data[\"Date\"], y=stock_data[\"Price\"], mode=\"lines\", name=stock)\n",
+    "        )\n",
+    "    fig.update_layout(\n",
+    "        title=\"Normalized Stock Prices\",\n",
+    "        xaxis_title=\"Date\",\n",
+    "        yaxis_title=\"Price\",\n",
+    "        xaxis_rangeslider_visible=True,\n",
+    "    )\n",
     "    return fig\n",
+    "\n",
     "\n",
     "# Gradio interface\n",
     "with gr.Blocks() as demo:\n",
@@ -352,7 +368,7 @@
     "    gr.Markdown(\"Use the range slider below the plot to adjust the time frame.\")\n",
     "    gr.Markdown(\"You can also pan and zoom directly within the plot.\")\n",
     "\n",
-    "demo.launch()\n"
+    "demo.launch()"
    ]
   },
   {
