normalize prices on slice

--- a/stocks/app.ipynb
+++ b/stocks/app.ipynb
@@ -149,6 +149,7 @@
     "from datetime import timedelta\n",
     "\n",
     "import gradio as gr\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.graph_objects as go\n",
     "import yfinance as yf\n",
@@ -312,10 +313,19 @@
     "    def run(self, **kwargs):\n",
     "        self.app.run_server(**kwargs)\n",
     "\n",
+    "    # TODO: only update if the range changed\n",
     "    def plot_prices(self, t_range=[None, None]):\n",
-    "        idx = self.timestamps.get_indexer([t_range[0]], method=\"nearest\")[0] if all(t_range) else 0\n",
-    "        price = self.prices.loc[self.timestamps[idx]]\n",
-    "        prices_normalized = self.prices / price - 1\n",
+    "        # idx = self.timestamps.get_indexer([t_range[0]], method=\"nearest\")[0] if all(t_range) else 0\n",
+    "        # price = self.prices.loc[self.timestamps[idx]]\n",
+    "        # prices_normalized = self.prices / price - 1\n",
+    "        # fig = go.Figure()\n",
+    "\n",
+    "        # normalize prices in t_range\n",
+    "        i, j = self.timestamps.get_indexer(t_range, method=\"nearest\") if all(t_range) else [0, -1]\n",
+    "        t0, t1 = self.timestamps[i], self.timestamps[j]\n",
+    "        price = self.prices.loc[t0]\n",
+    "        prices_normalized = np.nan * self.prices\n",
+    "        prices_normalized.loc[t0:t1] = self.prices[t0:t1] / price - 1\n",
     "        fig = go.Figure()\n",
     "\n",
     "        # rangeslider plot\n",
@@ -343,13 +353,12 @@
     "            )\n",
     "\n",
     "        # configure axes\n",
+    "        xaxis1_dict = dict(rangeslider=dict(visible=True))\n",
+    "        xaxis2_dict = dict(matches=\"x1\")\n",
     "        if all(t_range):\n",
-    "            xaxis1_dict = dict(rangeslider=dict(visible=True), range=t_range)\n",
-    "            xaxis2_dict = dict(matches=\"x1\", range=t_range)\n",
-    "        else:\n",
-    "            xaxis1_dict = dict(rangeslider=dict(visible=True))\n",
-    "            xaxis2_dict = dict(matches=\"x1\")\n",
-    "        yaxis1_dict = dict(showticklabels=False)\n",
+    "            xaxis1_dict[\"range\"] = t_range\n",
+    "            xaxis2_dict[\"range\"] = t_range\n",
+    "        yaxis1_dict = dict(type=\"log\", showticklabels=False)\n",
     "        yaxis2_dict = dict(title=\"Relative Change\")\n",
     "\n",
     "        fig.update_layout(\n",
@@ -416,7 +425,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f07e9073c40>"
+       "<IPython.lib.display.IFrame at 0x7f6e2c7f93f0>"
       ]
      },
      "metadata": {},
@@ -431,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aa150aa",
+   "id": "b99cf861",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -439,7 +448,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f37a7751",
+   "id": "65e0effb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18bc78d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fb0ab22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "941eb077",
    "metadata": {},
    "outputs": [],
    "source": []
