improve plot style

--- a/stocks/app.ipynb
+++ b/stocks/app.ipynb
@@ -55,31 +55,31 @@
        "      <th>1980-12-12</th>\n",
        "      <td>0.098834</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059947</td>\n",
+       "      <td>0.059946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-15</th>\n",
        "      <td>0.093678</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059947</td>\n",
+       "      <td>0.059946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-16</th>\n",
        "      <td>0.086802</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059947</td>\n",
+       "      <td>0.059946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-17</th>\n",
        "      <td>0.088951</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059947</td>\n",
+       "      <td>0.059946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-18</th>\n",
        "      <td>0.091530</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059947</td>\n",
+       "      <td>0.059946</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -125,11 +125,11 @@
       "text/plain": [
        "Ticker            AAPL       GOOGL        MSFT\n",
        "Date                                          \n",
-       "1980-12-12    0.098834    2.501941    0.059947\n",
-       "1980-12-15    0.093678    2.501941    0.059947\n",
-       "1980-12-16    0.086802    2.501941    0.059947\n",
-       "1980-12-17    0.088951    2.501941    0.059947\n",
-       "1980-12-18    0.091530    2.501941    0.059947\n",
+       "1980-12-12    0.098834    2.501941    0.059946\n",
+       "1980-12-15    0.093678    2.501941    0.059946\n",
+       "1980-12-16    0.086802    2.501941    0.059946\n",
+       "1980-12-17    0.088951    2.501941    0.059946\n",
+       "1980-12-18    0.091530    2.501941    0.059946\n",
        "...                ...         ...         ...\n",
        "2024-12-27  255.589996  192.759995  430.529999\n",
        "2024-12-30  252.199997  191.240005  424.829987\n",
@@ -353,13 +353,13 @@
     "            )\n",
     "\n",
     "        # configure axes\n",
-    "        xaxis1_dict = dict(rangeslider=dict(visible=True))\n",
-    "        xaxis2_dict = dict(matches=\"x1\")\n",
+    "        xaxis1_dict = dict(rangeslider=dict(visible=True, thickness=0.1), tickangle=-30, nticks=20)\n",
+    "        xaxis2_dict = dict(matches=\"x1\", showticklabels=False)\n",
     "        if all(t_range):\n",
     "            xaxis1_dict[\"range\"] = t_range\n",
     "            xaxis2_dict[\"range\"] = t_range\n",
-    "        yaxis1_dict = dict(type=\"log\", showticklabels=False)\n",
-    "        yaxis2_dict = dict(title=\"Relative Change\")\n",
+    "        yaxis1_dict = dict(type=\"log\", dtick=0.3, showticklabels=False)\n",
+    "        yaxis2_dict = dict(title=\"relative price change\", nticks=12, tickformat=\".2f\")\n",
     "\n",
     "        fig.update_layout(\n",
     "            xaxis1=xaxis1_dict,\n",
@@ -367,6 +367,19 @@
     "            xaxis2=xaxis2_dict,\n",
     "            yaxis2=yaxis2_dict,\n",
     "            uirevision=\"constant-key\",  # prevent resets from the xrange compression\n",
+    "            template=\"plotly\",\n",
+    "            height=600,\n",
+    "            margin=dict(t=50, b=50),\n",
+    "            font=dict(family=\"Courier New, Monospace\", size=14, weight=\"bold\"),\n",
+    "            legend=dict(\n",
+    "                title=dict(\n",
+    "                    text=\"assets\",\n",
+    "                    # font=dict(\n",
+    "                    #     size=16,         # Customize font size\n",
+    "                    #     color=\"blue\"     # Customize font color\n",
+    "                    # )\n",
+    "                )\n",
+    "            ),\n",
     "        )\n",
     "\n",
     "        return fig\n",
@@ -425,7 +438,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f6e2c7f93f0>"
+       "<IPython.lib.display.IFrame at 0x7f9e6b6a6050>"
       ]
      },
      "metadata": {},
@@ -441,14 +454,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b99cf861",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65e0effb",
    "metadata": {},
    "outputs": [],
    "source": []
