--- a/stocks/app.ipynb
+++ b/stocks/app.ipynb
@@ -146,11 +146,13 @@
     }
    ],
    "source": [
+    "import itertools\n",
     "from datetime import timedelta\n",
     "\n",
     "import gradio as gr\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "import yfinance as yf\n",
     "from dash import Dash, Input, Output, State, dcc, html\n",
@@ -329,11 +331,13 @@
     "        fig = go.Figure()\n",
     "\n",
     "        # rangeslider plot\n",
+    "        colors = itertools.cycle(px.colors.qualitative.Set2)\n",
     "        for asset in self.prices.columns:\n",
     "            fig.add_trace(\n",
     "                go.Scatter(\n",
     "                    x=self.timestamps,\n",
     "                    y=self.prices[asset],\n",
+    "                    line=dict(color=next(colors)),\n",
     "                    xaxis=\"x1\",\n",
     "                    yaxis=\"y1\",\n",
     "                    showlegend=False,\n",
@@ -341,14 +345,29 @@
     "            )\n",
     "\n",
     "        # main plot\n",
+    "        colors = itertools.cycle(px.colors.qualitative.Set2)\n",
     "        for asset in prices_normalized.columns:\n",
     "            fig.add_trace(\n",
     "                go.Scatter(\n",
     "                    x=self.timestamps,\n",
     "                    y=prices_normalized[asset],\n",
+    "                    line=dict(width=3, color=next(colors)),\n",
     "                    name=asset,\n",
     "                    xaxis=\"x2\",\n",
     "                    yaxis=\"y2\",\n",
+    "                )\n",
+    "            )\n",
+    "\n",
+    "        # dummy traces to show ticks on the right\n",
+    "        colors = itertools.cycle(px.colors.qualitative.Set2)\n",
+    "        for asset in prices_normalized.columns:\n",
+    "            fig.add_trace(\n",
+    "                go.Scatter(\n",
+    "                    x=[],\n",
+    "                    y=[],\n",
+    "                    xaxis=\"x2\",\n",
+    "                    yaxis=\"y3\",\n",
+    "                    showlegend=False,\n",
     "                )\n",
     "            )\n",
     "\n",
@@ -358,28 +377,38 @@
     "        if all(t_range):\n",
     "            xaxis1_dict[\"range\"] = t_range\n",
     "            xaxis2_dict[\"range\"] = t_range\n",
-    "        yaxis1_dict = dict(type=\"log\", dtick=0.3, showticklabels=False)\n",
-    "        yaxis2_dict = dict(title=\"relative price change\", nticks=12, tickformat=\".2f\")\n",
+    "        yaxis1_dict = dict(type=\"log\", dtick=0.5, showticklabels=False)\n",
+    "        yaxis2_dict = dict(\n",
+    "            title=\"relative price change\", nticks=12, tickformat=\".2f\", ticks=\"outside\"\n",
+    "        )\n",
+    "        yaxis3_dict = dict(\n",
+    "            matches=\"y2\",\n",
+    "            overlaying=\"y2\",\n",
+    "            side=\"right\",\n",
+    "            nticks=12,\n",
+    "            tickformat=\".2f\",\n",
+    "            ticks=\"outside\",\n",
+    "        )\n",
     "\n",
     "        fig.update_layout(\n",
     "            xaxis1=xaxis1_dict,\n",
     "            yaxis1=yaxis1_dict,\n",
     "            xaxis2=xaxis2_dict,\n",
     "            yaxis2=yaxis2_dict,\n",
+    "            yaxis3=yaxis3_dict,\n",
     "            uirevision=\"constant-key\",  # prevent resets from the xrange compression\n",
-    "            template=\"plotly\",\n",
-    "            height=600,\n",
-    "            margin=dict(t=50, b=50),\n",
     "            font=dict(family=\"Courier New, Monospace\", size=14, weight=\"bold\"),\n",
     "            legend=dict(\n",
-    "                title=dict(\n",
-    "                    text=\"assets\",\n",
-    "                    # font=dict(\n",
-    "                    #     size=16,         # Customize font size\n",
-    "                    #     color=\"blue\"     # Customize font color\n",
-    "                    # )\n",
-    "                )\n",
+    "                title=dict(text=\"assets: \"),\n",
+    "                orientation=\"h\",\n",
+    "                x=0.0,\n",
+    "                y=1.0,\n",
+    "                xanchor=\"left\",\n",
+    "                yanchor=\"bottom\",\n",
     "            ),\n",
+    "            margin=dict(t=50, b=50),\n",
+    "            template=\"plotly\",\n",
+    "            height=600,\n",
     "        )\n",
     "\n",
     "        return fig\n",
@@ -438,7 +467,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f9e6b6a6050>"
+       "<IPython.lib.display.IFrame at 0x7fa87fdbada0>"
       ]
      },
      "metadata": {},
@@ -462,14 +491,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "18bc78d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fb0ab22",
    "metadata": {},
    "outputs": [],
    "source": []
