code reorg and optimization

--- a/stocks/app.ipynb
+++ b/stocks/app.ipynb
@@ -55,31 +55,31 @@
        "      <th>1980-12-12</th>\n",
        "      <td>0.098834</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059946</td>\n",
+       "      <td>0.059947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-15</th>\n",
        "      <td>0.093678</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059946</td>\n",
+       "      <td>0.059947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-16</th>\n",
        "      <td>0.086802</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059946</td>\n",
+       "      <td>0.059947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-17</th>\n",
        "      <td>0.088951</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059946</td>\n",
+       "      <td>0.059947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1980-12-18</th>\n",
        "      <td>0.091530</td>\n",
        "      <td>2.501941</td>\n",
-       "      <td>0.059946</td>\n",
+       "      <td>0.059947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -125,11 +125,11 @@
       "text/plain": [
        "Ticker            AAPL       GOOGL        MSFT\n",
        "Date                                          \n",
-       "1980-12-12    0.098834    2.501941    0.059946\n",
-       "1980-12-15    0.093678    2.501941    0.059946\n",
-       "1980-12-16    0.086802    2.501941    0.059946\n",
-       "1980-12-17    0.088951    2.501941    0.059946\n",
-       "1980-12-18    0.091530    2.501941    0.059946\n",
+       "1980-12-12    0.098834    2.501941    0.059947\n",
+       "1980-12-15    0.093678    2.501941    0.059947\n",
+       "1980-12-16    0.086802    2.501941    0.059947\n",
+       "1980-12-17    0.088951    2.501941    0.059947\n",
+       "1980-12-18    0.091530    2.501941    0.059947\n",
        "...                ...         ...         ...\n",
        "2024-12-27  255.589996  192.759995  430.529999\n",
        "2024-12-30  252.199997  191.240005  424.829987\n",
@@ -292,42 +292,31 @@
     "class NormalizedAssetPricesApp:\n",
     "\n",
     "    def __init__(self, prices):\n",
-    "        self.prices = prices / prices.loc[prices.index[0]]\n",
-    "        self.timestamps = self.prices.index\n",
+    "        self.setup_env(prices)\n",
     "        self.setup_app()\n",
     "\n",
-    "    def setup_app(self):\n",
-    "        self.app = Dash(__name__)\n",
-    "        self.app.layout = html.Div(\n",
-    "            [dcc.Graph(id=\"plotly-normalized-asset-prices\", figure=self.plot_prices())]\n",
-    "        )\n",
+    "    def setup_env(self, prices):\n",
+    "        self.prices = prices / prices.loc[prices.index[0]]\n",
+    "        self.timestamps = self.prices.index\n",
+    "        self.idx_range = [None, None]\n",
+    "        self.fig = self.plot_prices()\n",
     "\n",
-    "        @self.app.callback(\n",
-    "            Output(\"plotly-normalized-asset-prices\", \"figure\"),\n",
-    "            Input(\"plotly-normalized-asset-prices\", \"relayoutData\"),\n",
-    "            State(\"plotly-normalized-asset-prices\", \"figure\"),\n",
-    "        )\n",
-    "        def update_plot(relayout_data, current_figure):\n",
-    "            \"\"\"Preserve whichever x-range the user has set by zoom/pan or slider.\"\"\"\n",
-    "            t_range = self.get_x_range(relayout_data, current_figure)\n",
-    "            return self.plot_prices(t_range)\n",
+    "    def normalize_prices(self):\n",
+    "        idx0, idx1 = self.idx_range\n",
+    "        date0, date1 = self.timestamps[idx0], self.timestamps[idx1]\n",
+    "        price = self.prices.loc[date0]\n",
+    "        self.prices_normalized = np.nan * self.prices\n",
+    "        self.prices_normalized.loc[date0:date1] = self.prices[date0:date1] / price - 1\n",
     "\n",
-    "    def run(self, **kwargs):\n",
-    "        self.app.run_server(**kwargs)\n",
+    "    def plot_prices(self, date_range=[None, None]):\n",
+    "        idx_range = self.date_to_idx_range(date_range)\n",
+    "        # do not update the figure if the range is unchanged\n",
+    "        if idx_range == self.idx_range:\n",
+    "            return self.fig\n",
+    "        else:\n",
+    "            self.idx_range = idx_range\n",
+    "            self.normalize_prices()\n",
     "\n",
-    "    # TODO: only update if the range changed\n",
-    "    def plot_prices(self, t_range=[None, None]):\n",
-    "        # idx = self.timestamps.get_indexer([t_range[0]], method=\"nearest\")[0] if all(t_range) else 0\n",
-    "        # price = self.prices.loc[self.timestamps[idx]]\n",
-    "        # prices_normalized = self.prices / price - 1\n",
-    "        # fig = go.Figure()\n",
-    "\n",
-    "        # normalize prices in t_range\n",
-    "        i, j = self.timestamps.get_indexer(t_range, method=\"nearest\") if all(t_range) else [0, -1]\n",
-    "        t0, t1 = self.timestamps[i], self.timestamps[j]\n",
-    "        price = self.prices.loc[t0]\n",
-    "        prices_normalized = np.nan * self.prices\n",
-    "        prices_normalized.loc[t0:t1] = self.prices[t0:t1] / price - 1\n",
     "        fig = go.Figure()\n",
     "\n",
     "        # rangeslider plot\n",
@@ -346,11 +335,11 @@
     "\n",
     "        # main plot\n",
     "        colors = itertools.cycle(px.colors.qualitative.Set2)\n",
-    "        for asset in prices_normalized.columns:\n",
+    "        for asset in self.prices_normalized.columns:\n",
     "            fig.add_trace(\n",
     "                go.Scatter(\n",
     "                    x=self.timestamps,\n",
-    "                    y=prices_normalized[asset],\n",
+    "                    y=self.prices_normalized[asset],\n",
     "                    line=dict(width=3, color=next(colors)),\n",
     "                    name=asset,\n",
     "                    xaxis=\"x2\",\n",
@@ -360,7 +349,7 @@
     "\n",
     "        # dummy traces to show ticks on the right\n",
     "        colors = itertools.cycle(px.colors.qualitative.Set2)\n",
-    "        for asset in prices_normalized.columns:\n",
+    "        for asset in self.prices_normalized.columns:\n",
     "            fig.add_trace(\n",
     "                go.Scatter(\n",
     "                    x=[],\n",
@@ -374,9 +363,9 @@
     "        # configure axes\n",
     "        xaxis1_dict = dict(rangeslider=dict(visible=True, thickness=0.1), tickangle=-30, nticks=20)\n",
     "        xaxis2_dict = dict(matches=\"x1\", showticklabels=False)\n",
-    "        if all(t_range):\n",
-    "            xaxis1_dict[\"range\"] = t_range\n",
-    "            xaxis2_dict[\"range\"] = t_range\n",
+    "        if all(date_range):\n",
+    "            xaxis1_dict[\"range\"] = date_range\n",
+    "            xaxis2_dict[\"range\"] = date_range\n",
     "        yaxis1_dict = dict(type=\"log\", dtick=0.5, showticklabels=False)\n",
     "        yaxis2_dict = dict(\n",
     "            title=\"relative price change\", nticks=12, tickformat=\".2f\", ticks=\"outside\"\n",
@@ -413,6 +402,14 @@
     "\n",
     "        return fig\n",
     "\n",
+    "    def date_to_idx_range(self, date_range):\n",
+    "        idx_range = (\n",
+    "            self.timestamps.get_indexer(date_range, method=\"nearest\").tolist()\n",
+    "            if all(date_range)\n",
+    "            else [0, -1]\n",
+    "        )\n",
+    "        return idx_range\n",
+    "\n",
     "    def get_x_range(self, relayout_data, current_figure, x_range=[None, None]):\n",
     "        if relayout_data:\n",
     "            # Check the main axis first (common when user zooms the top plot)\n",
@@ -443,7 +440,27 @@
     "            elif layout.get(\"xaxis1\", {}).get(\"range\"):\n",
     "                x_range = layout[\"xaxis1\"][\"range\"]\n",
     "\n",
-    "        return x_range"
+    "        return x_range\n",
+    "\n",
+    "    def setup_app(self):\n",
+    "        self.app = Dash(__name__)\n",
+    "        self.app.layout = html.Div(\n",
+    "            [dcc.Graph(id=\"plotly-normalized-asset-prices\", figure=self.fig)]\n",
+    "        )\n",
+    "\n",
+    "        @self.app.callback(\n",
+    "            Output(\"plotly-normalized-asset-prices\", \"figure\"),\n",
+    "            Input(\"plotly-normalized-asset-prices\", \"relayoutData\"),\n",
+    "            State(\"plotly-normalized-asset-prices\", \"figure\"),\n",
+    "        )\n",
+    "        def update_plot(relayout_data, current_figure):\n",
+    "            \"\"\"Preserve whichever x-range the user has set by zoom/pan or slider.\"\"\"\n",
+    "            date_range = self.get_x_range(relayout_data, current_figure)\n",
+    "            self.fig = self.plot_prices(date_range)\n",
+    "            return self.fig\n",
+    "\n",
+    "    def run(self, **kwargs):\n",
+    "        self.app.run_server(**kwargs)"
    ]
   },
   {
@@ -467,7 +484,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fa87fdbada0>"
+       "<IPython.lib.display.IFrame at 0x7f92c9137070>"
       ]
      },
      "metadata": {},
@@ -483,14 +500,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b99cf861",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18bc78d1",
    "metadata": {},
    "outputs": [],
    "source": []
